--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -27,7 +27,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/gender_label"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/age_tv" />
+                app:layout_constraintTop_toBottomOf="@+id/birthday_tv" />
 
             <TextView
                 android:id="@+id/display_name_label"
@@ -96,7 +96,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/about_me_label" />
 
             <TextView
-                android:id="@+id/age_tv"
+                android:id="@+id/birthday_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -106,10 +106,10 @@
                 app:layout_constraintEnd_toStartOf="@+id/height_tv"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/age_label" />
+                app:layout_constraintTop_toBottomOf="@+id/birthday_label" />
 
             <TextView
-                android:id="@+id/age_label"
+                android:id="@+id/birthday_label"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -131,11 +131,11 @@
                 android:text="@string/height"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/age_label"
+                app:layout_constraintStart_toEndOf="@+id/birthday_label"
                 app:layout_constraintTop_toBottomOf="@+id/about_me_tv" />
 
             <Button
-                android:id="@+id/invite_button"
+                android:id="@+id/save_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -157,7 +157,7 @@
                 android:text="-"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/age_tv"
+                app:layout_constraintStart_toEndOf="@+id/birthday_tv"
                 app:layout_constraintTop_toBottomOf="@+id/height_label" />
 
             <TextView
