--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -25,9 +25,8 @@
                 android:layout_marginEnd="16dp"
                 android:text="@string/weight"
                 app:layout_constraintEnd_toStartOf="@+id/gender_label"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText3" />
+                app:layout_constraintTop_toBottomOf="@+id/birthday_tv" />
 
             <TextView
                 android:id="@+id/display_name_label"
@@ -38,7 +37,6 @@
                 android:text="@string/display_name"
                 app:layout_constraintBottom_toBottomOf="@+id/name_et"
                 app:layout_constraintEnd_toStartOf="@+id/name_et"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/name_et" />
 
@@ -65,7 +63,6 @@
                 android:text="@string/about_me"
                 app:layout_constraintBottom_toBottomOf="@+id/description_et"
                 app:layout_constraintEnd_toStartOf="@+id/description_et"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/description_et" />
 
@@ -78,7 +75,6 @@
                 android:layout_marginEnd="16dp"
                 android:text="Birthday:"
                 app:layout_constraintEnd_toStartOf="@+id/height_label"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/description_et" />
 
@@ -91,7 +87,6 @@
                 android:layout_marginEnd="32dp"
                 android:text="@string/height"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/birthday_label"
                 app:layout_constraintTop_toBottomOf="@+id/description_et" />
 
@@ -101,10 +96,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="Save"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.211"
+                app:layout_constraintEnd_toStartOf="@+id/logout"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/barrier5" />
 
@@ -117,9 +111,8 @@
                 android:layout_marginEnd="32dp"
                 android:text="@string/gender"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/weight_label"
-                app:layout_constraintTop_toBottomOf="@+id/editText4" />
+                app:layout_constraintTop_toBottomOf="@+id/height_et" />
 
             <EditText
                 android:id="@+id/name_et"
@@ -132,7 +125,6 @@
                 android:hint="Enter your name..."
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/display_name_label"
                 app:layout_constraintTop_toBottomOf="@+id/photo_iv" />
 
@@ -147,26 +139,24 @@
                 android:hint="Enter a description..."
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/about_me_label"
                 app:layout_constraintTop_toBottomOf="@+id/name_et" />
 
-            <EditText
-                android:id="@+id/editText3"
+            <TextView
+                android:id="@+id/birthday_tv"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintEnd_toStartOf="@+id/editText4"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintBottom_toBottomOf="@+id/height_et"
+                app:layout_constraintEnd_toStartOf="@+id/height_et"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/birthday_label" />
 
             <EditText
-                android:id="@+id/editText4"
+                android:id="@+id/height_et"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -175,12 +165,11 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/editText3"
+                app:layout_constraintStart_toEndOf="@+id/birthday_tv"
                 app:layout_constraintTop_toBottomOf="@+id/height_label" />
 
             <EditText
-                android:id="@+id/editText5"
+                android:id="@+id/weight_et"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -188,13 +177,12 @@
                 android:layout_marginEnd="16dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                app:layout_constraintEnd_toStartOf="@+id/gender"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/gender_spinner"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/weight_label" />
 
             <Spinner
-                android:id="@+id/gender"
+                android:id="@+id/gender_spinner"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -203,8 +191,7 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/editText5"
+                app:layout_constraintStart_toEndOf="@+id/weight_et"
                 app:layout_constraintTop_toBottomOf="@+id/gender_label" />
 
             <android.support.constraint.Barrier
@@ -212,18 +199,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:barrierDirection="bottom"
-                app:constraint_referenced_ids="editText5"
-                tools:layout_editor_absoluteY="720dp" />
+                app:constraint_referenced_ids="weight_et" />
 
             <Button
                 android:id="@+id/logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="108dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="Logout"
-                app:layout_constraintEnd_toEndOf="@+id/gender"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/save_button"
                 app:layout_constraintTop_toTopOf="@+id/barrier5" />
 
